Alterando o caminho do JS.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
 
     </footer>
-    <script src="/js/principal.js"></script>
+    <script src="./js/principal.js"></script>
 </body>
 
 </html>
